--- a/ABDNrl.ipynb
+++ b/ABDNrl.ipynb
@@ -8441,7 +8441,7 @@
         "id": "OQ5Kk8Z_OWSe",
         "outputId": "f6528a7b-6b05-4187-f2f0-6757133e4748"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8471,7 +8471,7 @@
         "id": "rULgnbJgOyoe",
         "outputId": "5d583531-5fd8-4118-9384-ee25659395ce"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8499,7 +8499,7 @@
         "id": "jvx1TPsHSFg_",
         "outputId": "99415d12-1d18-4ee0-9e55-590a39e83bde"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8516,8 +8516,6 @@
       "source": [
         "3.Create a program that asks the user for a temperature in Celsius and converts it to Fahrenheit.\n",
         "\n",
-        "\n",
-        "\n",
         "#To convert a temperature from Fahrenheit to Celsius, use the formula:\n",
         "\n",
         "fahrenheit = float (input('Temp is: '))\n",
@@ -8532,7 +8530,7 @@
         "id": "-GJdD0GnS45O",
         "outputId": "59381b06-d1eb-4855-8573-0046a7d54e93"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8568,7 +8566,7 @@
         "id": "j-f_yCEIUEFv",
         "outputId": "ff3342aa-1d75-42a4-ef52-2ed886e96786"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8601,7 +8599,7 @@
         "id": "3Z1m1RfMU_1w",
         "outputId": "6671a7fb-6048-4917-d5cc-229885d976d3"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8637,7 +8635,7 @@
         "id": "eMVJRrZ6WnfL",
         "outputId": "8a6b5429-1cf5-4952-c57b-93c721f8e0f3"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8650,19 +8648,337 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "2) String Questions\n",
+        "\n",
+        "1.Write a Python program that takes a string input from the user and prints it in reverse order.\n",
+        "\n",
+        "2.Ask the user for a sentence and count the number of vowels in it.\n",
+        "\n",
+        "3.Write a program that replaces all spaces in a user-given string with underscores (_).\n",
+        "\n",
+        "4.Take a string from the user and check if it is a palindrome.\n",
+        "\n",
+        "5.Write a program to capitalize the first letter of each word in a given string. **bold text**\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "xlGiGFbRYTq2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Q1-)\n",
+        "reverse = input(\"Enter String:\")\n",
+        "print(reverse [::-1])"
+      ],
+      "metadata": {
+        "id": "TQRooop0XTYR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7b5af8d1-d684-4757-dbe1-e42fff9a7bc0"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter String:iah ludba\n",
+            "abdul hai\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def count_vowels(sentence):\n",
+        "    vowels = \"aeiouAEIOU\"\n",
+        "    count = sum(1 for char in sentence if char in vowels)\n",
+        "    return count\n",
+        "sentence = \"Abdul Hai is a hardworking developer\"\n",
+        "vowel_count = count_vowels(sentence)\n",
+        "print(f\"The number of vowels in the sentence is: {vowel_count}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9rgZyb-rialw",
+        "outputId": "264d6dd9-d1b2-4927-8ae2-7064156dbacf"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The number of vowels in the sentence is: 13\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sentence = input(\"Enter a sentence: \")\n",
+        "count = 0\n",
+        "i = 0\n",
+        "\n",
+        "while i < len(sentence):\n",
+        "    if sentence[i] in \"aeiouAEIOU\":\n",
+        "        count += 1\n",
+        "    i += 1  # Move to next character\n",
+        "\n",
+        "print(\"Number of vowels:\", count)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qZHUm4qAiajY",
+        "outputId": "ba21ce88-b6ce-4c4b-a173-34690bc38ee6"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a sentence: MY NAME IS ABDUL HAI\n",
+            "Number of vowels: 7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Q3-)\n",
+        "Replace = input(\"Enter String: \")\n",
+        "print(Replace.replace(\" \",\"_\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "znpJus9Pj3UM",
+        "outputId": "5c15f919-bdbf-4f5b-db7c-be056531c17f"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter String: MY NAME IS ABDUL HAI\n",
+            "MY_NAME_IS_ABDUL_HAI\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Words = input(\"Enter String: \")\n",
+        "print(Words.replace(\" \",\"_\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xj05HvTriahA",
+        "outputId": "dd09d92b-31e6-4b60-b171-7749e5660021"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter String: MY NAME IS ABDUL HAI\n",
+            "MY_NAME_IS_ABDUL_HAI\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Q4-)Main Condition/Logic [::-1] and adding .lower() means it will handle the case sensitivity\n",
+        "Palindrome = input(\"Enter String: \")\n",
+        "if Palindrome.lower() == Palindrome.lower()[::-1]:\n",
+        "  print(\"Palindrome\")\n",
+        "else:\n",
+        "  print(\"Not Palindrome\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P7WIFZjkiacJ",
+        "outputId": "4219e313-c5c4-4300-f821-a0cd63a729ee"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter String: Mom\n",
+            "Palindrome\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Q5-) Main logic is i used .title()\n",
+        "Capitalize = input(\"Enter String: \")\n",
+        "print(Capitalize.title())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YOccRARHlkFO",
+        "outputId": "84d45261-51a8-4e6e-8834-c9f224c1e010"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter String: Abdul Hai is a hardworking developer\n",
+            "Abdul Hai Is A Hardworking Developer\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Q-) 5.1.Write a program to capitalize the whole sentence in a given string. bold text\n",
+        "#.upper() is the logic\n",
+        "Capitalize = input(\"Enter String: \")\n",
+        "print(Capitalize.upper())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7nV_sS1VmMBF",
+        "outputId": "d52d513a-fcd7-4a16-81b0-f013e24074d7"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter String: i m a bad person\n",
+            "I M A BAD PERSON\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get input from the user\n",
+        "sentence = input(\"Enter a sentence: \")\n",
+        "\n",
+        "# Convert the sentence to uppercase\n",
+        "capitalized_sentence = sentence.upper()\n",
+        "\n",
+        "# Print the result\n",
+        "print(\"Capitalized Sentence:\", capitalized_sentence)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DpcJdCqWm2Qs",
+        "outputId": "da8bbe90-7bf7-4947-e9e0-90994faef203"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a sentence: i m a good boy\n",
+            "Capitalized Sentence: I M A GOOD BOY\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "TQRooop0XTYR"
+        "id": "LeygP2Oum3LE"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3) List Questions\n",
+        "\n",
+        "1.Ask the user to enter five numbers, store them in a list, and print the sum of the numbers.\n",
+        "\n",
+        "2.Write a program that takes a list of numbers from the user and finds the maximum and minimum numbers.\n",
+        "\n",
+        "3.Ask the user to enter a list of names, sort them alphabetically, and display the sorted list.\n",
+        "\n",
+        "4.Write a program that removes duplicates from a user-given list.\n",
+        "\n",
+        "5.Create a program that takes two lists from the user and merges them into one without duplicates. **bold text**"
+      ],
+      "metadata": {
+        "id": "nfXruPZeYuf2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4) Dictionary Questions\n",
+        "\n",
+        "1.Write a program that asks the user for three key-value pairs and stores them in a dictionary, then prints the dictionary.\n",
+        "\n",
+        "2.Take a dictionary of student names as keys and their marks as values, then print the name of the student with the highest marks.\n",
+        "\n",
+        "3.Ask the user to enter a sentence and count the frequency of each word, storing the result in a dictionary.\n",
+        "\n",
+        "4.Create a dictionary with country names as keys and their capitals as values. Allow the user to enter a country and display its capital.\n",
+        "\n",
+        "5.Write a program that takes a dictionary from the user and allows them to search for a key. If the key exists, print its value; otherwise, display a message saying the key is not found. **bold text**\n"
+      ],
+      "metadata": {
+        "id": "FdD9L-cOY8rv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "CSH_PP7bZMJ6"
+      }
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPtM0XM6QON+W2Xcae60d1U",
+      "authorship_tag": "ABX9TyNIgMjrYRpPafFIuJ02cRt9",
       "include_colab_link": true
     },
     "kernelspec": {
